src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Biomedicines (LBM)</fullName>
                </value>
                <value>
                    <fullName>Oncology (OBU)</fullName>
                </value>
                <value>
                    <fullName>Diabetes (DBU)</fullName>
                </value>
                <value>
                    <fullName>EMBU</fullName>
                </value>
                <value>
                    <fullName>Elanco</fullName>
                </value>
                <value>
                    <fullName>Non Business Unit Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_Type__c</fullName>
        <label>Code Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ICD-9-CM</fullName>
                </value>
                <value>
                    <fullName>CPT-4</fullName>
                </value>
                <value>
                    <fullName>NDC</fullName>
                </value>
                <value>
                    <fullName>LOINC</fullName>
                </value>
                <value>
                    <fullName>MedDRA</fullName>
                </value>
                <value>
                    <fullName>ICD-10-CM</fullName>
                </value>
                <value>
                    <fullName>READ</fullName>
                </value>
                <value>
                    <fullName>SNOMED</fullName>
                </value>
                <value>
                    <fullName>HCPCS</fullName>
                </value>
                <value>
                    <fullName>ATC</fullName>
                </value>
                <value>
                    <fullName>GPI</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Non-specific code type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Asset_Refresh_Date__c</fullName>
        <label>Data Asset Refresh Date</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Data_Asset_Refresh_Interval__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Asset_Refresh_Interval__c</fullName>
        <label>Data Asset Refresh Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Asset_Refresh_Year__c</fullName>
        <label>Data Asset Refresh Year</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Data_Asset_Refresh_Date__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-2000</fullName>
                </value>
                <value>
                    <fullName>2000-2020</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Asset</label>
        <referenceTo>Data_Asset__c</referenceTo>
        <relationshipLabel>Related Library Content</relationshipLabel>
        <relationshipName>RWD_Data_Asset_Reference_Material</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>EMR</fullName>
                </value>
                <value>
                    <fullName>EMR-Claims Linked</fullName>
                </value>
                <value>
                    <fullName>PRO</fullName>
                </value>
                <value>
                    <fullName>Registry</fullName>
                </value>
                <value>
                    <fullName>Sickness Fund (EU)</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Database__c</fullName>
        <label>Database</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPRD</fullName>
                </value>
                <value>
                    <fullName>DoD</fullName>
                </value>
                <value>
                    <fullName>Flatiron</fullName>
                </value>
                <value>
                    <fullName>Geisinger (Diabetes)</fullName>
                </value>
                <value>
                    <fullName>Humedica (Diabetes)</fullName>
                </value>
                <value>
                    <fullName>IMS Oncology</fullName>
                </value>
                <value>
                    <fullName>MEPS</fullName>
                </value>
                <value>
                    <fullName>NHANES</fullName>
                </value>
                <value>
                    <fullName>Non-specific Database</fullName>
                </value>
                <value>
                    <fullName>Practice Fusion</fullName>
                </value>
                <value>
                    <fullName>SEER Medicare</fullName>
                </value>
                <value>
                    <fullName>Truven Marketscan</fullName>
                </value>
                <value>
                    <fullName>Other Database</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disease_State__c</fullName>
        <label>Disease State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Therapeutic_Area_Primary__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Alopecia Areata</fullName>
                </value>
                <value>
                    <fullName>Alzheimer’s Disease</fullName>
                </value>
                <value>
                    <fullName>Alzheimer’s Disease Psychosis</fullName>
                </value>
                <value>
                    <fullName>Anemia</fullName>
                </value>
                <value>
                    <fullName>Anxiety</fullName>
                </value>
                <value>
                    <fullName>Atopic Dermatitis</fullName>
                </value>
                <value>
                    <fullName>Attention Deficit-Hyperactivity Disorder</fullName>
                </value>
                <value>
                    <fullName>AxSpA (Axial Spondyloarthritis)</fullName>
                </value>
                <value>
                    <fullName>Bladder Cancer</fullName>
                </value>
                <value>
                    <fullName>Bone and Soft Tissue Cancers</fullName>
                </value>
                <value>
                    <fullName>Breast Cancer</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular Disease</fullName>
                </value>
                <value>
                    <fullName>Chronic Kidney Disease</fullName>
                </value>
                <value>
                    <fullName>Chronic Pain</fullName>
                </value>
                <value>
                    <fullName>Cluster Headache</fullName>
                </value>
                <value>
                    <fullName>Colorectal Cancer</fullName>
                </value>
                <value>
                    <fullName>Crohn’s Disease</fullName>
                </value>
                <value>
                    <fullName>Depression</fullName>
                </value>
                <value>
                    <fullName>Disuse Atrophy</fullName>
                </value>
                <value>
                    <fullName>Erectile Dysfunction</fullName>
                </value>
                <value>
                    <fullName>Gastrointestinal Cancer</fullName>
                </value>
                <value>
                    <fullName>Genitourinary Cancer</fullName>
                </value>
                <value>
                    <fullName>Gynecologic Cancer</fullName>
                </value>
                <value>
                    <fullName>Head and Neck Cancer</fullName>
                </value>
                <value>
                    <fullName>Hematologic Cancer</fullName>
                </value>
                <value>
                    <fullName>Hepatocellular Cancer</fullName>
                </value>
                <value>
                    <fullName>High Risk Vascular Disease</fullName>
                </value>
                <value>
                    <fullName>Juvenile Idiopathic Arthritis</fullName>
                </value>
                <value>
                    <fullName>Lung and Thoracic Cancer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>DRDP Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analysis Results</fullName>
                </value>
                <value>
                    <fullName>Assessment Results</fullName>
                </value>
                <value>
                    <fullName>BU Strategy</fullName>
                </value>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>Code Library</fullName>
                </value>
                <value>
                    <fullName>Code List or Standardized Cohort</fullName>
                </value>
                <value>
                    <fullName>Codes (excel file with ICD)</fullName>
                </value>
                <value>
                    <fullName>Committee Charter</fullName>
                </value>
                <value>
                    <fullName>Committee Membership List</fullName>
                </value>
                <value>
                    <fullName>Consult Advice Log</fullName>
                </value>
                <value>
                    <fullName>Consultation Results</fullName>
                </value>
                <value>
                    <fullName>Contract Artifact</fullName>
                </value>
                <value>
                    <fullName>Contract Checklist</fullName>
                </value>
                <value>
                    <fullName>Counts</fullName>
                </value>
                <value>
                    <fullName>Data Delivery Schedule</fullName>
                </value>
                <value>
                    <fullName>Data Dictionary</fullName>
                </value>
                <value>
                    <fullName>Diagram</fullName>
                </value>
                <value>
                    <fullName>EXPERT Consultation Advice Log</fullName>
                </value>
                <value>
                    <fullName>EXPERT Review Evaluation Form</fullName>
                </value>
                <value>
                    <fullName>EXPERT Review Evaluation Form Resubmitted</fullName>
                </value>
                <value>
                    <fullName>EXPERT Study Team Response</fullName>
                </value>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>Feasibility Count</fullName>
                </value>
                <value>
                    <fullName>Feasibility Results</fullName>
                </value>
                <value>
                    <fullName>General Communication</fullName>
                </value>
                <value>
                    <fullName>General Information</fullName>
                </value>
                <value>
                    <fullName>Guidelines</fullName>
                </value>
                <value>
                    <fullName>Lessons Learned</fullName>
                </value>
                <value>
                    <fullName>Logs</fullName>
                </value>
                <value>
                    <fullName>Macro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executing_Function__c</fullName>
        <label>Executing Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GPORWE</fullName>
                    <color>#0B6FCE</color>
                    <label>GPORWE</label>
                </value>
                <value>
                    <fullName>GPS</fullName>
                    <color>#78C953</color>
                    <label>GPS</label>
                </value>
                <value>
                    <fullName>Medical</fullName>
                    <color>#E27001</color>
                    <label>Medical</label>
                </value>
                <value>
                    <fullName>Medical Affairs - Global/Corporate</fullName>
                    <color>#A845DC</color>
                    <label>Medical Affairs - Global/Corporate</label>
                </value>
                <value>
                    <fullName>Medical Affairs - US</fullName>
                    <color>#F3D904</color>
                    <label>Medical Affairs - US</label>
                </value>
                <value>
                    <fullName>Medical Affairs - EUCAN</fullName>
                    <color>#A53711</color>
                    <label>Medical Affairs - EUCAN</label>
                </value>
                <value>
                    <fullName>Medical Affairs - EMBU</fullName>
                    <color>#66E9BD</color>
                    <label>Medical Affairs - EMBU</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#0B24BE</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GPORWE</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>GPS</fullName>
                </value>
                <value>
                    <fullName>GEO</fullName>
                </value>
                <value>
                    <fullName>EXPERT</fullName>
                </value>
                <value>
                    <fullName>RWA-ACT</fullName>
                </value>
                <value>
                    <fullName>RWE Partnerships</fullName>
                </value>
                <value>
                    <fullName>CDIO</fullName>
                </value>
                <value>
                    <fullName>Not Business Area Specific</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Environment__c</fullName>
        <label>IT Environment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LINUX</fullName>
                </value>
                <value>
                    <fullName>Netezza</fullName>
                </value>
                <value>
                    <fullName>SAS Grid</fullName>
                </value>
                <value>
                    <fullName>Other IT Environment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Indication</label>
        <referenceTo>DRDP_Indication__c</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Molecule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Molecule</label>
        <referenceTo>Molecule__c</referenceTo>
        <relationshipLabel>Reference Material</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Final Deliverables</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EuCan</fullName>
                </value>
                <value>
                    <fullName>Emerging Markets</fullName>
                </value>
                <value>
                    <fullName>Global (multiple regions)</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <formula>Request__r.Request_ID__c</formula>
        <label>Request ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Record_Type__c</fullName>
        <formula>Request__r.RecordType.Name</formula>
        <label>Request Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <formula>TEXT(Request__r.Request_Status__c)</formula>
        <label>Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Related Library Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strategy_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategy Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Versions_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Function__c</fullName>
        <label>Sub-Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Executing_Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Biomedicines</fullName>
                    <color>#0B6FCE</color>
                    <label>Biomedicines</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                    <color>#78C953</color>
                    <label>Canada</label>
                </value>
                <value>
                    <fullName>China</fullName>
                    <color>#E27001</color>
                    <label>China</label>
                </value>
                <value>
                    <fullName>COE</fullName>
                    <color>#A845DC</color>
                    <label>COE</label>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                    <color>#F3D904</color>
                    <label>Diabetes</label>
                </value>
                <value>
                    <fullName>France Hub</fullName>
                    <color>#A53711</color>
                    <label>France Hub</label>
                </value>
                <value>
                    <fullName>Germany Hub</fullName>
                    <color>#66E9BD</color>
                    <label>Germany Hub</label>
                </value>
                <value>
                    <fullName>HTA-CE</fullName>
                    <color>#0B24BE</color>
                    <label>HTA-CE</label>
                </value>
                <value>
                    <fullName>HTA-EMBU/J</fullName>
                    <color>#419249</color>
                    <label>HTA-EMBU/J</label>
                </value>
                <value>
                    <fullName>Italy Hub</fullName>
                    <color>#B6E32E</color>
                    <label>Italy Hub</label>
                </value>
                <value>
                    <fullName>Japan</fullName>
                    <color>#641CCF</color>
                    <label>Japan</label>
                </value>
                <value>
                    <fullName>Korea</fullName>
                    <color>#F96FB7</color>
                    <label>Korea</label>
                </value>
                <value>
                    <fullName>LBM-AI/BMJ</fullName>
                    <color>#2F5D85</color>
                    <label>LBM-AI/BMJ</label>
                </value>
                <value>
                    <fullName>LBM-CV/URO</fullName>
                    <color>#AFCADF</color>
                    <label>LBM-CV/URO</label>
                </value>
                <value>
                    <fullName>LBM-NS</fullName>
                    <color>#8F6429</color>
                    <label>LBM-NS</label>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                    <color>#EFAE73</color>
                    <label>Oncology</label>
                </value>
                <value>
                    <fullName>PMO</fullName>
                    <color>#57F17C</color>
                    <label>PMO</label>
                </value>
                <value>
                    <fullName>PRO</fullName>
                    <color>#DDDDDD</color>
                    <label>PRO</label>
                </value>
                <value>
                    <fullName>Spain Hub</fullName>
                    <color>#FF6666</color>
                    <label>Spain Hub</label>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                    <color>#FF99FF</color>
                    <label>Taiwan</label>
                </value>
                <value>
                    <fullName>UK Hub</fullName>
                    <color>#9999FF</color>
                    <label>UK Hub</label>
                </value>
                <value>
                    <fullName>US Biomedicines</fullName>
                    <color>#BBBBBB</color>
                    <label>US Biomedicines</label>
                </value>
                <value>
                    <fullName>US Diabetes</fullName>
                    <color>#000000</color>
                    <label>US Diabetes</label>
                </value>
                <value>
                    <fullName>USHO</fullName>
                    <color>#660000</color>
                    <label>USHO</label>
                </value>
                <value>
                    <fullName>US Oncology</fullName>
                    <color>#663300</color>
                    <label>US Oncology</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#FF0000</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_Primary__c</fullName>
        <label>Therapeutic Area (Primary)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alzheimer’s &amp; NDD</fullName>
                </value>
                <value>
                    <fullName>Bone, Muscle, Joint</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Psychiatry &amp; Pain</fullName>
                </value>
                <value>
                    <fullName>Urology and Men’s Health</fullName>
                </value>
                <value>
                    <fullName>Non Therapeutic Area Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tool__c</fullName>
        <label>Tool</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Aetion</fullName>
                </value>
                <value>
                    <fullName>CEWorks/SAEFetyWorks</fullName>
                </value>
                <value>
                    <fullName>CPRD Online Gold</fullName>
                </value>
                <value>
                    <fullName>CPRD TriaViz</fullName>
                </value>
                <value>
                    <fullName>Empirica HealthCare</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>NZ SQL</fullName>
                </value>
                <value>
                    <fullName>SAS</fullName>
                </value>
                <value>
                    <fullName>Tableau</fullName>
                </value>
                <value>
                    <fullName>Treatment Pathways</fullName>
                </value>
                <value>
                    <fullName>UNIX</fullName>
                </value>
                <value>
                    <fullName>Other Tool</fullName>
                </value>
                <value>
                    <fullName>Non-specific tool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>External_Community_PANG</fullName>
        <active>true</active>
        <description>Record Type for External Community Libraries</description>
        <label>External_Community_PANG</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Reference_PANG</fullName>
        <active>true</active>
        <description>Record Type for General Reference Libraries</description>
        <label>General_Reference_PANG</label>
    </recordTypes>
    <recordTypes>
        <fullName>Generic_Business_PANG</fullName>
        <active>true</active>
        <label>Generic Business_PANG</label>
    </recordTypes>
    <recordTypes>
        <fullName>PANG_RWE_Strategy</fullName>
        <active>true</active>
        <label>DRDP Strategy</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWD_Data_Asset_Reference_Material</fullName>
        <active>false</active>
        <label>RWD Data Asset Reference Material</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWD_Data_Asset_Reference_Material1</fullName>
        <active>false</active>
        <label>Data Asset Material_PANG</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWE_Analysis_Production</fullName>
        <active>false</active>
        <label>Analysis Production_PANG</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWE_Best_Practices</fullName>
        <active>false</active>
        <label>DRDP Best Practices</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWE_Best_Practices1</fullName>
        <active>true</active>
        <label>Best Practice_PANG</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWE_Content</fullName>
        <active>false</active>
        <label>DRDP Final Output</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWE_Final_Output</fullName>
        <active>true</active>
        <label>Final Deliverable_PANG</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWE_Inc_Internal_PANG</fullName>
        <active>true</active>
        <description>Record Type for Internal Libraries</description>
        <label>DRDP_Inc_Internal_PANG</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWE_Project_Management</fullName>
        <active>true</active>
        <label>Project Management_PANG</label>
    </recordTypes>
    <recordTypes>
        <fullName>RWE_Reference_Material</fullName>
        <active>true</active>
        <label>Reference Material_PANG</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tags_Only_PANG</fullName>
        <active>true</active>
        <label>Tags Only_PANG</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_Material_PANG</fullName>
        <active>true</active>
        <description>Record Type for Training &amp; Communication Libraries</description>
        <label>Training_Material_PANG</label>
    </recordTypes>
</CustomObject>